--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -53,57 +53,64 @@ Your network configuration should now look like the following:
 
 ## New Features
 
+### Call entrypoints on a deployed contract: `taq transfer` / `taq call`
 
+The Taquito plugin now exposes a `taq transfer`` (or `taq call``) task in Taqueria which will call the specified Michelson contract deployed to a Taqueria environment (default environment is one with sandbox named local)
 
-### Contract Registry
+This allows interactions from implicit accounts to implicit or smart contract accounts
 
+Basic usage is:
 
+```shell
+taq transfer <contract alias or address>
+```
 
+Examples:
+
+- `taq call counter --param counter.parameter.param1.tz` will call a smart contract aliased as counter in the default environment with the parameter contained in that `.tz`` file, transferring `0`` tez
+- `taq transfer tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb --tez 20` will transfer 20 tez to that address, which is some implicit account
+
+Full documentation can be found [here](https://taqueria.io/docs/plugins/plugin-taquito/#the-taq-transfer-task)
+
+### Run Ligo native tests: `taq test`
+
+This task tests the LIGO source code and ouputs a result suggesting a failure or success. Normally you'd have a contract file and a separate test file that includes the contract's code, both within the /contracts directory
+
+Basic usage is:
+
+```shell
+taq test <filename>
+```
+
+Full documentation can be found [here](https://taqueria.io/docs/plugins/plugin-ligo/#the-taq-test-task)
 
 ## Other Product Changes
 
-### Bugfixes
+- Improvements to the Taqueria CI/CD pipeline
 
-- SDK's getContracts method not honoring regex pattern [#1011](https://github.com/ecadlabs/taqueria/issues/1011/)
 
 
 ### Pull Requests
 
-- Compiler plugins refactored to use registered contracts [#981](https://github.com/ecadlabs/taqueria/issues/981/)
-Final release 0.14.4 by @GImbrailo in #1217
+* New Taquito plugin task called `transfer` to enable interaction with deployed contracts by @jchenche in [#1245](https://github.com/ecadlabs/taqueria/pull/1245)
+* Adding links to scaffold projects in the table by @sinapsist in [#1252](https://github.com/ecadlabs/taqueria/pull/1252)
+* add mock and metadata plugins by @AlirezaHaghshenas in [#1251](https://github.com/ecadlabs/taqueria/pull/1251)
+* updating quickstart section and a few other places by @alexzbusko in [#1250](https://github.com/ecadlabs/taqueria/pull/1250)
+* Add test task for ligo plugin by @jchenche in [#1255](https://github.com/ecadlabs/taqueria/pull/1255)
+* removed tutorial from sidebar and website. Also removed legacy hello-… by @alexzbusko in [#1256](https://github.com/ecadlabs/taqueria/pull/1256)
+* run tests in parallel by @AlirezaHaghshenas in [#1232](https://github.com/ecadlabs/taqueria/pull/1232)
+* 🏗️ PR ➾Update default sandbox protocol to Jakarta by @hu3man in [#1264](https://github.com/ecadlabs/taqueria/pull/1264)
+* Fix originate and compile commands in command pallet by @AlirezaHaghshenas in [#1258](https://github.com/ecadlabs/taqueria/pull/1258)
+* Use esbuild to bundle TVsCE instead of Parcel by @MichalLytek in [#1235](https://github.com/ecadlabs/taqueria/pull/1235)
+* updated test configs to use specific ports for tzkt instances by @alexzbusko in [#1266](https://github.com/ecadlabs/taqueria/pull/1266)
+* Fix build issues for taqueria-protocol on node v16.16.0+ by @mweichert in [#1243](https://github.com/ecadlabs/taqueria/pull/1243)
+* Transfer call e2e tests by @sinapsist in [#1263](https://github.com/ecadlabs/taqueria/pull/1263)
+* 🏗️ PR ➾ Update default protocol to K by @hu3man in [#1269](https://github.com/ecadlabs/taqueria/pull/1269)
+* 🏗️ PR ➾ Refactor Tezos-client (decoupled from the flextesa plugin) and updated typecheck and simulate by @jchenche in [#1272](https://github.com/ecadlabs/taqueria/pull/1272)
+* 1042 - Relax faucet validation and display error hints by @mweichert in [#1262](https://github.com/ecadlabs/taqueria/pull/1262)
+* 🏗️ PR ➾ Prerelease 0.19.0 and GH wf improvements by @hu3man in [#1271](https://github.com/ecadlabs/taqueria/pull/1271)
 
-- Simple view of Sandbox state by @AlirezaHaghshenas in #1121(https://github.com/ecadlabs/taqueria/issues/981/)
-- 1200 taq api for dapp jcc by @jchenche in #1224(https://github.com/ecadlabs/taqueria/issues/981/)
-- Fix failing tests after TVsCE feature merge by @AlirezaHaghshenas in #1227(https://github.com/ecadlabs/taqueria/issues/981/)
-- Doc for ligo taquito and toolkit by @jchenche in #1228(https://github.com/ecadlabs/taqueria/issues/981/)
-- Document fix after 0.14 release by @sinapsist in #1225(https://github.com/ecadlabs/taqueria/issues/981/)
-- Update originate command to select contract file by @AlirezaHaghshenas in #1231(https://github.com/ecadlabs/taqueria/issues/981/)
-- Fix(docs): '--version' output show version 0.16.0 by @GImbrailo in #1237(https://github.com/ecadlabs/taqueria/issues/981/)
-- Build SDK using tsup by @mweichert in #1230(https://github.com/ecadlabs/taqueria/issues/981/)
-- Fixed test stubs generated by Jest plugin by @mweichert in #1234(https://github.com/ecadlabs/taqueria/issues/981/)
-- Release 0.16.0 by @sinapsist in #1233(https://github.com/ecadlabs/taqueria/issues/981/)
-- Fix persistent state by @ricklove in #1222(https://github.com/ecadlabs/taqueria/issues/981/)
-- Release v0.18.0 by @GImbrailo in #1241(https://github.com/ecadlabs/taqueria/issues/981/)
-- New Taquito plugin task called transfer to enable interaction with deployed contracts by @jchenche in #1245(https://github.com/ecadlabs/taqueria/issues/981/)
-- Adding links to scaffold projects in the table by @sinapsist in #1252(https://github.com/ecadlabs/taqueria/issues/981/)
-- Add mock and metadata plugins by @AlirezaHaghshenas in #1251(https://github.com/ecadlabs/taqueria/issues/981/)
-- Updating quickstart section and a few other places by @alexzbusko in #1250(https://github.com/ecadlabs/taqueria/issues/981/)
-- Add test task for ligo plugin by @jchenche in #1255(https://github.com/ecadlabs/taqueria/issues/981/)
-- Removed tutorial from sidebar and website. Also removed legacy hello-… by @alexzbusko in #1256(https://github.com/ecadlabs/taqueria/issues/981/)
-- Run tests in parallel by @AlirezaHaghshenas in #1232(https://github.com/ecadlabs/taqueria/issues/981/)
-- 🏗️ PR ➾Update default sandbox protocol to Jakarta by @hu3man in #1264(https://github.com/ecadlabs/taqueria/issues/981/)
-- Fix originate and compile commands in command pallet by @AlirezaHaghshenas in #1258(https://github.com/ecadlabs/taqueria/issues/981/)
-- Use esbuild to bundle TVsCE instead of Parcel by @MichalLytek in #1235(https://github.com/ecadlabs/taqueria/issues/981/)
-- Updated test configs to use specific ports for tzkt instances by @alexzbusko in #1266(https://github.com/ecadlabs/taqueria/issues/981/)
-- Fix build issues for taqueria-protocol on node v16.16.0+ by @mweichert in #1243(https://github.com/ecadlabs/taqueria/issues/981/)
-- Transfer call e2e tests by @sinapsist in #1263(https://github.com/ecadlabs/taqueria/issues/981/)
-- 🏗️ PR ➾ Update default protocol to K by @hu3man in #1269(https://github.com/ecadlabs/taqueria/issues/981/)
-- 🏗️ PR ➾ Refactor Tezos-client (decoupled from the flextesa plugin) and updated typecheck and simulate by @jchenche in #1272(https://github.com/ecadlabs/taqueria/issues/981/)
-- 1042 - Relax faucet validation and display error hints by @mweichert in #1262(https://github.com/ecadlabs/taqueria/issues/981/)
-- 🏗️ PR ➾ Prerelease 0.19.0 by @hu3man in #1271(https://github.com/ecadlabs/taqueria/issues/981/)
-
-
-**Full Changelog**: https://github.com/ecadlabs/taqueria/compare/v0.14.2...v0.19.8
+**Full Changelog**: [https://github.com/ecadlabs/taqueria/compare/v0.18.0...v0.20.0)](https://github.com/ecadlabs/taqueria/compare/v0.18.0...v0.20.0)
 
 
 # Taqueria v0.8.0   
