Update date on release notes

--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -6,7 +6,7 @@ title: Taqueria Releases
 
 | Details     |               |
 | ----------- | ------------- |
-|Release Date | Sept 08, 2022 |
+|Release Date | Sept 28, 2022 |
 |Release Type | Minor         |
 |Release Page | [v0.20.0](https://github.com/ecadlabs/taqueria/releases/tag/v0.20.0) |
 
@@ -24,7 +24,7 @@ title: Taqueria Releases
 Teztnets.xyz no longer supports faucet files for testnet accounts which is a breaking change for Taqueria users. This release includes an interim solution in which users can generate and fund an account via the new Teztnets faucet, and manually configure
 
 :::note
-We're working on an improved workflow for funding testnet accounts and will be deprecating and removing faucets from Taqueria
+We're working on an improved workflow for funding testnet accounts and will be deprecating and removing faucet files from Taqueria
 :::
 
 Follow these steps to fund and configure a testnet account:
