--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -70,7 +70,7 @@ taq transfer <contract alias or address>
 
 Examples:
 
-- `taq call --entrypoint counter --param counter.parameter.param1.tz` will call a smart contract aliased as counter in the default environment with the parameter contained in that `.tz` file, transferring `0` tez
+- `taq call counter --param counter.parameter.param1.tz` will call a smart contract aliased as counter in the default environment with the parameter contained in that `.tz` file, transferring `0` tez
 - `taq transfer tz1VSUr8wwNhLAzempoch5d6hLRiTh8Cjcjb --tez 20` will transfer 20 tez to that address, which is some implicit account
 
 Full documentation can be found [here](https://taqueria.io/docs/plugins/plugin-taquito/#the-taq-transfer-task)
