docs: sync web docs with README from taco-shop scaffold

--- a/website/docs/scaffolds/taco-shop.mdx
+++ b/website/docs/scaffolds/taco-shop.mdx
@@ -13,7 +13,7 @@ title: Taco Shop
 
 ## Quickstart
 
-In a rush? You can follow the steps below to get up and running immediatley  
+In a rush? You can follow the steps below to get up and running immediatley:
 
 ### Scaffold and Initialize the Project
 
@@ -89,7 +89,7 @@ cd taco-shop
 
 - `/.taq` - This hidden folder stores the Taqueria configuration and state
 - `/app` - This is the React dApp 
-- `/contracts` - This folder contains the LIGO smart contracts
+- `/contracts` - This folder contains the multiple file LIGO smart contract
 - `/tests` - This folder contains the automated tests
 - `/artifacts` - This folder contains the compiled Michelson `.tz` contracts
 
@@ -199,29 +199,6 @@ This should return the address of the contract on the testnet which looks like t
 This scaffold comes with a pre-configured faucet file for the testnet which is shared by all users and can cause issues. It is recommended that you replace the faucet file in the project's `config.json` file with your own which you can get from the [Teztnets Faucet](https://teztnets.xyz/). Further information about network configuration can be found [here](/docs/config/networks)
 :::
 
-
-### Insert the Contract Address (Optional)
-
-There is a way to point dApp to a hardcoded contract.
-To do so you need to insert the address of the contract into the `/app/App.tsx` file. Copy the address returned from the command above and paste it into the `contractAddress` variable in the `/app/index.tsx` file as shown here:
-
-```ts /app/src/app.tsx
-function app() {
-  const [rpcUrl, setRpcUrl] = useState("https://ghostnet.ecadinfra.com");
-  const [contractAddress, setContractAddress] = useState(
-      "KT1CPASSW7rstFQw6vENBkXmG6mJNsDMauTP"
-      // getAliasAddress(config, "hello-tacos")
-  );
-  const [contractStorage, setContractStorage] = useState<number | undefined>(
-    undefined
-  );
-  const [Tezos, setTezos] = useState<TezosToolkit>();
-  const [connected, setConnected] = useState(false);
-```
-
-You should now be able to access the Taco Shop dApp at [http://localhost:3000](http://localhost:3000/)
-
-
 ### Build and Start the React Dapp
 
 Now that the contract has been deployed and the address added to the dApp, you can build and start the React dApp
@@ -250,6 +227,28 @@ You should now be able to access the Taco Shop dApp at [http://localhost:3000](h
 
 By default, page refresh updates the page UI to point to the address of the new deployment.
 
+### Insert the Contract Address (Optional)
+
+There is a way to point dApp to a hardcoded contract.
+To do so you need to insert the address of the contract into the `/app/App.tsx` file. Copy the address returned from the command above and paste it into the `contractAddress` variable in the `/app/index.tsx` file as shown here:
+
+```ts /app/src/app.tsx
+function app() {
+  const [rpcUrl, setRpcUrl] = useState("https://ghostnet.ecadinfra.com");
+  const [contractAddress, setContractAddress] = useState(
+      "KT1CPASSW7rstFQw6vENBkXmG6mJNsDMauTP"
+      // getAliasAddress(config, "hello-tacos")
+  );
+  const [contractStorage, setContractStorage] = useState<number | undefined>(
+    undefined
+  );
+  const [Tezos, setTezos] = useState<TezosToolkit>();
+  const [connected, setConnected] = useState(false);
+```
+
+You should now be able to access the Taco Shop dApp at [http://localhost:3000](http://localhost:3000/)
+
+
 ### Connect to Temple Wallet
 
 Open a browser and navigate to [http://localhost:3000](http://localhost:3000/)
@@ -268,7 +267,10 @@ Click the `order` button and then authorize the transaction in Temple Wallet
 
 Once completed, you will see the value of `available_tacos` decrease by the number of tacos you ordered
 
-### Testing
+
+Alternatively, you could buy tacos with the Taq CLI by executing `taq call hello-tacos.tz --param hello-tacos.parameter.buySomeTacos.tz`
+
+## Testing
 
 This scaffold comes with Jest tests in the `tests` folder which has been initalized as a partition. The scaffold uses the `@taqueria/plugin-jest` plugin to run the tests
 
