--- a/website/docs/scaffolds/scaffold-basics.mdx
+++ b/website/docs/scaffolds/scaffold-basics.mdx
@@ -28,10 +28,16 @@ During the scaffolding process, a setup script is run. This will install the req
 npm run setup
 ```
 
-To start the project, run:
+To start the project (can be different depending on which scaffold), run the following command that is applicable to the scaffolded project:
 
 ```shell
-npm run setup
+npm run start
+```
+
+Or,
+
+```shell
+npm run start:app
 ```
 
 ## Available scaffolds
@@ -40,6 +46,5 @@ The following scaffolds are currently available:
 
 | Name                         | URL                                                      | Description                                            |
 |------------------------------|----------------------------------------------------------|--------------------------------------------------------|
-| taqueria-scaffold-quickstart | https://github.com/ecadlabs/taqueria-scaffold-quickstart | Full stack dApp with the counter contract              |
 | taqueria-scaffold-taco-shop  | https://github.com/ecadlabs/taqueria-scaffold-taco-shop  | Full stack dApp with a simple contract to sell tacos   |
 | taqueria-scaffold-nft        | https://github.com/ecadlabs/taqueria-scaffold-nft        | A Taqueria project for developing NFT                  |
