--- a/website/docs/vs-code-extension/overview.mdx
+++ b/website/docs/vs-code-extension/overview.mdx
@@ -17,20 +17,20 @@ Questions:
 
 ## Installation
 
-More details on how to isntall Taqueria VS Code Extension can be found [here](/docs/getting-started/installation.mdx)
+More details on how to install Taqueria VS Code Extension can be found [here](/docs/getting-started/installation.mdx)
 
 ## Overview
 
-The extension consist if next items:
+The extension consists of the following sections in VS Code:
 
-1. Health-check section
-2. Create new Taqueria project section
-3. Scaffold project section
+1. System check to make sure your system has what it needs
+2. Taqueria projects that you have initialized
+3. Projects created from a Scaffold
 
 <img alt="VS Code extension intro" src={useBaseUrl('/img/vs-code/taqueria-vs-code-intro.png')} />
 
 :::note
-The Taqueria VS Code Extension provides direct access to Taqueria tasks from the command palette. Under the hood, the VS Code Extension makes calls to the CLI, so you can be assured the behaviour of tasks will remain consistent regardless of whether they are executed from a terminal or the command palette. The steps in this guide are for using the Taqueria CLI, but you can also run the commands from the Taqueria extension via the VS Code command palette if you prefer
+The Taqueria VS Code Extension provides direct access to Taqueria tasks. Under the hood, the VS Code Extension makes calls to the CLI, so you can be assured the behaviour of tasks will remain consistent regardless of whether they are executed from a terminal or the extension. The steps in this guide are for using the Taqueria CLI, but you can also run the commands from the Taqueria extension if you prefer
 :::
 
 ## Starting a Taqueria Project
