--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -22,9 +22,9 @@ This is a quick introduction to the main concepts of Taqueria. If you are lookin
 Taqueria is here to help make developing on Tezos easier. Taqueria supercharges your projects with a powerful and centralized configuration and access to top Tezos development tools through tasks that you run from the command line
 
 Some of the things Taqueria can do for you include:
-- Compiling smart contracts using the [LIGO](/docs/plugins/plugin-ligo/), [SmartPY](/docs/plugins/plugin-smartpy/), or [Archetype](/docs/plugins/plugin-archetype/) plugins
+- Compiling smart contracts using the [LIGO](/docs/plugins/plugin-ligo/), [SmartPy](/docs/plugins/plugin-smartpy/), or [Archetype](/docs/plugins/plugin-archetype/) plugins
 - Running a local sandbox with the [Flextesa](/docs/plugins/plugin-flextesa/) plugin
-- Originating a smart contract to a sandbox and testnet with the [Taquito plugin](/docs/plugins/plugin-taquito/)
+- Originating a smart contract to a sandbox and testnet with the [Taquito](/docs/plugins/plugin-taquito/) plugin
 - Generating TypeScript types from a Michelson contract with the [Contract Types](/docs/plugins/plugin-contract-types/) plugin
 - Typechecking Michelson contracts and simulating contract calls with the [Tezos Client](/docs/plugins/plugin-tezos-client/) plugin
 - Testing dapps and smart contracts with the [Jest](/docs/plugins/plugin-jest/) plugin
@@ -34,12 +34,12 @@ Some of the things Taqueria can do for you include:
 
 Taqueria is an extensible, open source plugin based framework and task runner for Tezos development
 
-In more practical terms, Taqueria is a task runner that you can use from the command line or the VS Code command palette to quickly accomplish things like starting a sandbox or originating a contract. Taqueria comes with a few basic tasks, but relies on plugins to add tasks that provide complex and domain specific functionality
+In more practical terms, Taqueria is a task runner that you can use from the command line order VS Code to quickly accomplish things like starting a sandbox or originating a contract. Taqueria comes with a few basic tasks, but relies on plugins to add tasks that provide complex and domain specific functionality
 
 Taqueria has a few major components:
  - A command line interface (CLI) you use in your terminal through a command named `taq`
  - A library of plugins that add tasks to Taqueria to do cool and useful things like compiling and originating smart contracts, and type generation
- - A VS Code Extension which provides the ability to run Taqueria tasks from the command palette
+ - A VS Code Extension which provides the ability to run Taqueria tasks from the command palette or the UI
  - A GitHub action so Taqueria can be used in your CI/CD workflows
 
 ## Basic Components
@@ -64,12 +64,12 @@ You can see what tasks are available to run in any given context by running `taq
 ### Taqueria Project
 
 A Taqueria project is one that has been initialized by Taqueria using the `taq init` command. It will have the following directory structure created:
-- `/artifacts`: This is where Taqueria will store artifacts that it creates during the course of its execution
-- `/contracts`: This is where Taqueria will store smart contracts that it compiles
-- `./.taq`: This is where Taqueria will store its configuration
+- `artifacts`: This is where Taqueria will store artifacts that it creates during the course of its execution
+- `contracts`: This is where Taqueria will store smart contracts that it compiles
+- `.taq`: This is where Taqueria will store its configuration
 
 :::note
-Configuration for Taqueria projects including accounts, networks, and sandboxes is done in `./.taq/config.json`
+Configuration for Taqueria projects including accounts, networks, and sandboxes is done in `.taq/config.json`
 :::
 
 ### Taqueria Plugins
@@ -87,6 +87,7 @@ Currently available plugins include:
 - Contract Types Generator
 - Tezos Client
 - Jest Test Runner
+- Metadata
 - IPFS Pinata
 
 ### Taqueria SDK
