Fix heading indentation

--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -70,7 +70,7 @@ _Note: A built in `taq update plugins` feature is planned for a future release_
 :::
 
 
-## New Features
+### New Features
 
 #### ✅ Call entrypoints on a deployed contract: `taq transfer` / `taq call`
 
@@ -122,7 +122,7 @@ Note, this does require the `jq` cli tool to be installed ('brew install jq')
 - Documentation improvements
 - Scaffolds updated to use Taqueria v0.20.2
 
-#### Pull Requests
+### Pull Requests
 
 - New Taquito plugin task called `transfer` to enable interaction with deployed contracts by @jchenche in [#1245](https://github.com/ecadlabs/taqueria/pull/1245)
 - Adding links to scaffold projects in the table by @sinapsist in [#1252](https://github.com/ecadlabs/taqueria/pull/1252)
@@ -351,7 +351,7 @@ Once all your contract
 |Release Type | Minor         |
 |Release Page | [v0.12.0](https://github.com/ecadlabs/taqueria/releases/tag/v0.12.0) |
 
-#### What's Changed
+### What's Changed
 
 - Improvements to TVsCE 02 by @AlirezaHaghshenas in https://github.com/ecadlabs/taqueria/pull/1034
 - docs: fix/update version on installation doc page by @jevonearth in https://github.com/ecadlabs/taqueria/pull/1054
@@ -868,7 +868,7 @@ Specifically:
 |Release Type | Minor         |
 |Release Page | [v0.2.1](https://github.com/ecadlabs/taqueria/releases/tag/v0.2.1) |
 
-#### What's Changed
+### What's Changed
 
 - Update GA property to UA by @hu3man in https://github.com/ecadlabs/taqueria/pull/413
 - Fix for CI built binaries version test by @hu3man in https://github.com/ecadlabs/taqueria/pull/414
